2018-02-11 Satya Panuganti <prakashsatya10@gmail.com>

-Changed patch size to 8x8.
-Added code/tools/src/niqe.py

/************************************************************************/

2018-02-11 Satya Panuganti <prakashsatya10@gmail.com>

-Added FOCUSS solver.
 Also made it possible to choose between different pursuit algorithms by
 the sparse inpaint class in code/algos/

/************************************************************************/

2018-02-10 Satya Panuganti <prakashsatya10@gmail.com>

-Fixed bug

/************************************************************************/

2018-02-10 Satya Panuganti <prakashsatya10@gmail.com>

-Removed GUI and other unnecessary files.

/************************************************************************/

2018-02-09 Satya Panuganti <prakashsatya10@gmail.com>

-Fixed bugs in code/algos/src/omp.cxx and code/algos/src/sparse_inpaint.cxx

/************************************************************************/

2018-02-08 Satya Panuganti <prakashsatya10@gmail.com>

-Removed create_dictionary binary file

/************************************************************************/

2018-02-08 Satya Panuganti <prakashsatya10@gmail.com>

-Modified GUI to deal with only grayscale images.
-Completed Inpainting via Sparse.
-Need to perform tests.

/************************************************************************/

2018-02-07 Satya Panuganti <prakashsatya10@gmail.com>

-Modified SparseInpaint class present in code/algos to load a dictionary
 from a path.
-Need to find a way to remove columns based on mask.

/************************************************************************/

2018-02-07 Satya Panuganti <prakashsatya10@gmail.com>

-Modified create_dictionary to store greyscale images.
-Implemented an untested version of OMP in code/algos/

/************************************************************************/

2018-02-07 Satya Panuganti <prakashsatya10@gmail.com>

-Fixed bug in create_dictionary.cxx
